maze.island.IslandMaze.scala.error
Erreur de compilation :
IslandMaze:13: error: '=>' expected but '}' found.
    }
    ^