maze.island.IslandMaze.scala.code
override def run() {
  
  def keepHandOnSideWall()  {
    
    var etat = 0
    
    etat match {
      
      case 0 -> setDirection(Direction.NORTH)
      
      
    }
    
    
    
    gauche();
    while (estFaceMur() == true ) {
      droite();
    }
    avance();
    if (getDirection() != Direction.NORTH) {
      setDirection(Direction.NORTH)
    }
      
  }
  
  while (estSurBiscuit == false) {
    keepHandOnSideWall();
  }
  
	prendBiscuit();

  
}